# geoqik

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  ReadMe.md  build.bat  build.sh  cleanup_run.bat  cleanup_run.sh  vcpkg.json
examples/: CMakeLists.txt  Grid.hpp  Origin.hpp  example_client_log_replay.cpp  example_client_mesh.cpp  example_client_poc.cpp  example_client_points_lines.cpp  example_client_settings.cpp  example_curve.cpp  example_grid.cpp  example_mesh.cpp  example_removing_geometry.cpp  example_renderer_standalone.cpp  example_sphere.cpp  example_spiral.cpp  example_transformations.cpp  imgui.ini  sleep_helper.hpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/Core/: Assert.hpp  Compiler.hpp  DLLWarnings.hpp  FmtIncludeHelper.hpp  Handle.hpp  ScopedAction.hpp  UUID.hpp  Warnings.hpp
src/core/source/: Assert.cpp
src/example_executable_src/: CMakeLists.txt  main.cpp
src/example_library_src/: CMakeLists.txt
src/example_library_src/include/example_library/: library.hpp  warnings.hpp
src/example_library_src/source/: library.cpp
src/geoqik/: CMakeLists.txt
src/geoqik/include/GeoQik/: GeoQik.hpp
src/geoqik/source/: Camera.cpp  Camera.hpp  CameraAutoFit.cpp  CameraAutoFit.hpp  CameraInteractor.hpp  Color.hpp  Context.cpp  Context.hpp  GLScene.hpp  GeoQik.cpp  GeoQikLog.cpp  GeoQikLog.hpp  GeoQikMessageJsonSerialization.cpp  GeoQikMessageJsonSerialization.hpp  GeoQikMessageSerialization.cpp  GeoQikMessageSerialization.hpp  GeoQikMessages.hpp  GeoQikReplayUndo.cpp  GeoQikReplayUndo.hpp  GeoQikSettings.hpp  GeoQik_Glfw.hpp  GeometryBuffer.hpp  GeometryHelpers.hpp  GlfwWindow.cpp  GlfwWindow.hpp  IdempotencyData.hpp  ImGuiOverlay.cpp  ImGuiOverlay.hpp  InputCaptureState.hpp  InputState.cpp  InputState.hpp  MathConstants.hpp  OpenGLDrawablesManager.hpp  RayPlaneIntersection.hpp  Scene.cpp  Scene.hpp  WindowSettings.hpp
src/geoqik/source/ConcurrentQueue/: ConcurrentQueue.hpp
src/geoqik/source/GeometryBuffers/: GeometryBufferConcept.hpp  LineBuffer.hpp  MeshBuffer.hpp  PointBuffer.hpp
src/geoqik/source/Rendering/: GeoQikSceneRenderer.cpp  GeoQikSceneRenderer.hpp  OpenGLSceneRenderer.cpp  OpenGLSceneRenderer.hpp
src/geoqik_api_types/: CMakeLists.txt
src/geoqik_api_types/include/GeoQik/: ApiTypes.h
src/geoqik_client/: CMakeLists.txt
src/geoqik_client/include/GeoQikClient/: GeoQikClient.hpp
src/geoqik_client/include/GeoQikClient/detail/: ClientTypes.hpp  Connection.hpp  ProcessManager.hpp
src/geoqik_protocol/: CMakeLists.txt
src/geoqik_protocol/include/GeoQikProtocol/: Protocol.hpp
src/geoqik_server/: CMakeLists.txt
src/geoqik_server/source/: CommandDispatch.cpp  CommandDispatch.hpp  IpcServer.cpp  IpcServer.hpp  main.cpp
src/opengl/: CMakeLists.txt
src/opengl/include/OpenGL/: FmtIncludeHelper.hpp  FrameState.hpp  IndexBuffer.hpp  LineType.hpp  Location.hpp  OpenGL.hpp  ShaderSources.hpp  Uniform.hpp  UnsignedIntId.hpp  UpdateBuffer.hpp  VertexArray.hpp  VertexBuffer.hpp
src/opengl/include/OpenGL/Drawable/: DrawableTransparencyInfo.hpp  DrawablesManager.hpp  LineDrawable.hpp  MeshDrawable.hpp  PointDrawable.hpp
src/opengl/include/OpenGL/Programs/: CreateProgram.hpp  LineProgram.hpp  MeshProgram.hpp  PointProgram.hpp  ProgramId.hpp  ProgramManager.hpp
src/opengl/source/: Attribute.cpp  FrameState.cpp  IndexBuffer.cpp  ShaderSources.cpp  Uniform.cpp  VertexArray.cpp  VertexBuffer.cpp
src/opengl/source/Drawable/: LineDrawable.cpp  MeshDrawable.cpp  PointDrawable.cpp
src/opengl/source/Programs/: CreateProgram.cpp  LineProgram.cpp  MeshProgram.cpp  PointProgram.cpp  ProgramId.cpp  ProgramManager.cpp  ProgramOpenGL.cpp  ProgramOpenGL.hpp
src/renderer/: CMakeLists.txt
src/renderer/include/: CameraProjectionType.hpp  PickRay.hpp  Viewport.hpp
src/renderer/include/Core/: Assert.hpp  DLLWarnings.hpp
src/renderer/include/Renderer/: Assert.hpp  Camera.hpp  CameraAutoFit.hpp  CameraInteractor.hpp  CameraProjectionType.hpp  Color.hpp  DLLWarnings.hpp  GlfwWindow.hpp  ImGuiOverlay.hpp  InputCaptureState.hpp  InputState.hpp  MathConstants.hpp  PickRay.hpp  Plane.hpp  RayPlaneIntersection.hpp  Renderer.hpp  RendererGlfw.hpp  ReplayGuiState.hpp  Viewport.hpp  Warnings.hpp  WindowSettings.hpp
src/renderer/opengl/: CMakeLists.txt
src/renderer/opengl/include/: Buffer.hpp
src/renderer/opengl/include/OpenGL/: Attribute.hpp  BufferAccessPattern.hpp  BufferId.hpp  IndexBuffer.hpp  LineType.hpp  OpenGL.hpp  SignedIntId.hpp  Uniform.hpp  UnsignedIntId.hpp  UpdateBuffer.hpp  VertexArray.hpp
src/renderer/opengl/include/OpenGL/Drawable/: DrawableTransparencyInfo.hpp  DrawablesManager.hpp  LineDrawable.hpp  MeshDrawable.hpp  PointDrawable.hpp
src/renderer/opengl/include/OpenGL/Programs/: LineProgram.hpp  MeshProgram.hpp  PointProgram.hpp  (+1 more)
src/renderer/opengl/source/: Attribute.cpp  IndexBuffer.cpp  ShaderSources.cpp  Uniform.cpp  VertexArray.cpp  VertexBuffer.cpp
src/renderer/opengl/source/Drawable/: LineDrawable.cpp  MeshDrawable.cpp  PointDrawable.cpp
src/renderer/opengl/source/Programs/: CreateProgram.cpp  LineProgram.cpp  MeshProgram.cpp  PointProgram.cpp  ProgramId.cpp  ProgramManager.cpp
src/renderer/source/: Camera.cpp  CameraAutoFit.cpp  GlfwWindow.cpp  ImGuiOverlay.cpp  InputState.cpp  Renderer.cpp  imgui.ini
test/TestGeoQikApi/: CMakeLists.txt  GeoQikApiTestBase.hpp  TestGeoQikApi.cpp  TestGeoQikApi_Lines.cpp  TestGeoQikApi_Points.cpp
test/TestGeoQikClient/: CMakeLists.txt  TestGeoQikClient.cpp
test/TestGeoQikInternals/: AssertTest.cpp  BufferTest.cpp  CMakeLists.txt  CameraAutoFitTest.cpp  CameraInteractorTest.cpp  CameraTest.cpp  ConcurrentQueueTest.cpp  CreateProgramTest.cpp  DrawableTest.cpp  GLSceneTest.cpp  GeoQikTestMatchers.hpp  GeometryBufferTest.cpp  InputCaptureStateTest.cpp  InputStateTest.cpp  MeshBufferTest.cpp  ProtocolTest.cpp  RayPlaneIntersectionTest.cpp  RendererViewportTest.cpp  SceneTest.cpp  TestGeoQikLog.cpp  TestGeoQikLogJson.cpp  TestGeoQikReplayUndo.cpp  TransparencySortingTest.cpp  WindowSettingsTest.cpp
(+34 files in other folders)
