function(create_geoqik_internal_test testName)
    add_executable(${testName} ${testName}.cpp)
    target_link_libraries(${testName} PRIVATE gtest gtest_main geoqik::geoqik geoqik::geoqik_internals)
    add_test(NAME geoqik.${testName} COMMAND ${testName})
    set_property(GLOBAL APPEND PROPERTY ${PROJECT_NAME}_COVERAGE_TESTS ${testName})
endfunction()

create_geoqik_internal_test(BufferTest)
create_geoqik_internal_test(CameraAutoFitTest)
create_geoqik_internal_test(CameraInteractorTest)
create_geoqik_internal_test(CameraTest)
create_geoqik_internal_test(ConcurrentQueueTest)
create_geoqik_internal_test(GeometryBufferTest)
create_geoqik_internal_test(SceneTest)
create_geoqik_internal_test(TransparencySortingTest)
create_geoqik_internal_test(TestGeoQikLog)
create_geoqik_internal_test(TestGeoQikReplayUndo)
create_geoqik_internal_test(WindowSettingsTest)
