function(create_geoqik_internal_test testName)
    add_executable(${testName} ${testName}.cpp)
    target_link_libraries(${testName} PRIVATE gtest gtest_main geoqik::geoqik_internals Threads::Threads)
    add_test(NAME geoqik.${testName} COMMAND ${testName})
    set_property(GLOBAL APPEND PROPERTY ${PROJECT_NAME}_COVERAGE_TESTS ${testName})
endfunction()

function(create_protocol_test testName)
    add_executable(${testName} ${testName}.cpp)
    target_link_libraries(${testName} PRIVATE gtest gtest_main geoqik::protocol)
    add_test(NAME geoqik.${testName} COMMAND ${testName})
    set_property(GLOBAL APPEND PROPERTY ${PROJECT_NAME}_COVERAGE_TESTS ${testName})
endfunction()

create_geoqik_internal_test(AssertTest)
create_geoqik_internal_test(ConcurrentQueueTest)
create_geoqik_internal_test(GeometryBufferTest)
create_geoqik_internal_test(MeshBufferTest)
create_protocol_test(ProtocolTest)
create_geoqik_internal_test(WindowSettingsTest)
target_link_libraries(WindowSettingsTest PRIVATE geoqik::geoqik)
create_geoqik_internal_test(SceneTest)
create_geoqik_internal_test(TestGeoQikLog)
create_geoqik_internal_test(TestGeoQikLogJson)
target_link_libraries(TestGeoQikLogJson PRIVATE nlohmann_json::nlohmann_json)
create_geoqik_internal_test(TestGeoQikReplayUndo)
